# Netdog

./: .gitignore  CMakeLists.txt  install.ps1  netdog.cpp  uninstall.ps1
.github/workflows/: CD.yaml
